--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="text-center"><span class="glyphicon glyphicon-user"></span> Asking the important Questions</h1>
+            <h1 class="text-center"><span class="glyphicon glyphicon-user"></span> All the questions!</h1>
             <hr>
             <br>
             <div class="text-center">
